Closed Bug 914567 Opened 11 years ago Closed 11 years ago

cannot build directshow code by VS2013RC

Categories

(Core :: Audio/Video, defect)

x86
Windows 8
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

Attachments

(1 file)

Attached patch Fix for VS2013RCSplinter Review
need algorithm header to use std:min/std:max for VS2013
Attachment #802205 - Flags: review?(cpearce)
Attachment #802205 - Flags: review?(cpearce) → review+
Blocks: VC12
https://hg.mozilla.org/mozilla-central/rev/8598b710e416
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: