Bug 914567 - Cannot build directshow code by VS2013RC. r=cpearce