content/media/directshow/SourceFilter.cpp
@@ -10,6 +10,7 @@
 #include "DirectShowUtils.h"
 #include "MP3FrameParser.h"
 #include "prlog.h"
+#include <algorithm>
 
 using namespace mozilla::media;
 
